Subiendo archivos al repo Frontend666

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -4,8 +4,7 @@
 <div class="login-container">
   <p-card class="login-card" styleClass="p-shadow-4">
     <div class="login-header">
-      <h2>Bienvenido a <span>*pordeterminar*</span></h2>
-      <p>Sistema de gestión médica</p>
+      <h2>Bienvenido</h2>
     </div>
 
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
